# todo-cli

./: Cargo.toml  README.md  data.txt  test.txt  test2.txt
src/: app.rs  args.rs  main.rs  storage.rs  structuredata.txt  task.rs
