[package]
name = "todo"
version = "0.1.0"
authors = ["Christian Díaz Rivera <christianda3@gmail.com>"]
description = "A simple CLI todo app written in Rust"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
serde = "1.0.228"
serde_json = "1.0.148"
